Integrated DynamoDB. Added Server APIs.
